--- a/webpage/style.css
+++ b/webpage/style.css
@@ -19,6 +19,9 @@ h1, h2 {
     font-family: sans-serif;
     text-align: center;
 }
+span{
+    color:red;
+}
 
 input[type="submit"] {
     font-size: 2em;
